force-app/main/default/objects/Interview__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Structured comments and feedback details from the interviewer.</description>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>