force-app/main/default/objects/Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User conducting the interview.</description>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews_Conducted</relationshipName>
    <type>Lookup</type>
</CustomField>