force-app/main/default/objects/Interview__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Mode of the scheduled interview.</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video Call</fullName>
                <default>true</default>
                <label>Video Call</label>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>