force-app/main/default/objects/Interview__c/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <description>Reason captured if the interview is rescheduled.</description>
    <label>Reschedule Reason</label>
    <type>TextArea</type>
</CustomField>