force-app/main/default/objects/Interview__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <description>The specific round of this interview.</description>
    <label>Round</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR Round</fullName>
                <default>true</default>
                <label>HR Round</label>
            </value>
            <value>
                <fullName>Technical Round</fullName>
            </value>
            <value>
                <fullName>Managerial Round</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>