force-app/main/default/objects/Interview__c/validationRules/Interviewer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interviewer_Required</fullName>
    <active>true</active>
    <description>Ensures that an interviewer is selected when the interview is Scheduled, Completed, or Rescheduled.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, "Scheduled"), ISPICKVAL(Status__c, "Completed"), ISPICKVAL(Status__c, "Rescheduled")), ISBLANK(Interviewer__c))</errorConditionFormula>
    <errorDisplayField>Interviewer__c</errorDisplayField>
    <errorMessage>An interviewer must be assigned to scheduled, completed, or rescheduled interviews.</errorMessage>
</ValidationRule>