force-app/main/default/objects/Interview__c/validationRules/Reschedule_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reschedule_Reason_Required</fullName>
    <active>true</active>
    <description>Ensures that a reschedule reason is entered if the status is set to Rescheduled.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Rescheduled&quot;), ISBLANK(Reschedule_Reason__c))</errorConditionFormula>
    <errorDisplayField>Reschedule_Reason__c</errorDisplayField>
    <errorMessage>Please provide a reason for rescheduling this interview.</errorMessage>
</ValidationRule>